# rust_ffi

./: .cursorignore  .gitignore  readme.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: cflite_batch.yml  cflite_build.yml  cflite_cron.yml  cflite_pr.yml  fuzz.sh
cpp_project/: Makefile  README.md  build.sh  main.cpp
rust_ffi_example/: Cargo.toml  README.md  SECURITY_FIX.md  build.rs  rust-toolchain.toml  rust_ffi_example.h
rust_ffi_example/benches/: compression_bench.rs  varint_bench.rs
rust_ffi_example/examples/: compression_decompression_demo.rs
rust_ffi_example/fuzz/: Cargo.toml
rust_ffi_example/fuzz/fuzz_targets/: fuzz_c_compress.rs  fuzz_c_compress_lz4.rs  fuzz_c_compress_zstd.rs  fuzz_c_decode_varint.rs  fuzz_c_decompress.rs  fuzz_c_decompress_lz4.rs  fuzz_c_decompress_zstd.rs  fuzz_c_encode_varint.rs  fuzz_compression.rs  fuzz_decode_varint.rs  fuzz_decompress.rs  fuzz_encode_varint.rs  fuzz_varint_roundtrip.rs  fuzz_zstd_rust_roundtrip.rs
rust_ffi_example/src/: clib.c  lib.rs
