[package]
name = "rust_ffi_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "compression_cli"
path = "src/bin/main.rs"

[features]
# Feature to enable verbose error messages for debugging
verbose-errors = []

[dependencies]
libc = "0.2"
hex = "0.4" # Added for hex string decoding

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] } # Downgraded for Rust 1.75 compatibility
arbitrary = { version = "1.4.1", features = ["derive"] }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "varint_bench"
harness = false

[package.metadata.cargo-fuzz]
targets = ["fuzz_compression"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = 1
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1