[package]
name = "rust_ffi_example-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rust_ffi_example]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compression"
path = "fuzz_targets/fuzz_compression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encode_varint"
path = "fuzz_targets/fuzz_encode_varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_varint"
path = "fuzz_targets/fuzz_decode_varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_varint_roundtrip"
path = "fuzz_targets/fuzz_varint_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_c_compress"
path = "fuzz_targets/fuzz_c_compress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_c_decompress"
path = "fuzz_targets/fuzz_c_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_c_encode_varint"
path = "fuzz_targets/fuzz_c_encode_varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_c_decode_varint"
path = "fuzz_targets/fuzz_c_decode_varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decompress"
path = "fuzz_targets/fuzz_decompress.rs"
test = false
doc = false
bench = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = 1
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1